--- a/style.css
+++ b/style.css
@@ -179,6 +179,12 @@ body {
   font-size: 13px;
 }
 
+.day.today,
+.calendar-day.today {
+  border: 2px solid #4b032b;
+}
+
+
 /* 남/여 상태 표시 */
 
 .status-male {
